# trickydata-inputs

./: .gitignore  LICENSE  README.md  frontmatter-schema.yaml  index.html  trickydata-index.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
compiler/: Cargo.toml
compiler/src/: compile.rs  corpus.rs  format.rs  frontmatter.rs  hex.rs  index.rs  lib.rs  metadata.rs  schema.rs
inputs/invalid/: f32-truncated.input  utf16-lone-high-surrogate.input  utf16-lone-low-surrogate.input
report/: README.md  main.py  model.py  payload.py  render.py  schema.py
report/templates/: base.html  index.html  input.html  tags.html
scripts/: build-pages-index.py  install-hooks.sh
v0.0.3/: index.html  tags.html
v0.0.3/inputs/: airplane_default_presentation.html  airplane_emoji_presentation.html  airplane_text_presentation.html  arabic_bismillah_ligature.html  bidi_arabic_isolate.html  bidi_override_role.html  bidi_plain_role.html  canonical_a_with_ring.html  canonical_angstrom_sign.html  canonical_cafe_nfc.html  canonical_cafe_nfd.html  canonical_hangul_jamo_gak.html  canonical_hangul_syllable_gak.html  casing_dotted_i_default_lower.html  casing_german_sharp_s.html  casing_german_sharp_s_upper.html  casing_greek_final_sigma.html  casing_greek_nonfinal_sigma.html  casing_turkic_capital_dotted_i.html  casing_turkic_capital_i.html  casing_turkic_dotless_i.html  casing_turkic_small_i.html  combining_mark_overflow.html  confusable_admin_cyrillic.html  confusable_admin_latin.html  confusable_paypal_cyrillic.html  confusable_paypal_latin.html  effective_power.html  (+422 more)
v0.0.4/: index.html  tags.html
v0.0.5/: index.html  tags.html
(+1392 files in other folders)
