[package]
name = "trickydata-compiler"
version = "0.1.0"
edition = "2021"
description = "Parse, validate and compile the trickydata input corpus into distributable artifacts."
license = "MIT"

[lib]
name = "trickydata_compiler"
path = "src/lib.rs"

[[bin]]
name = "compile"
path = "src/bin/compile.rs"

[[bin]]
name = "verify-utf8"
path = "src/bin/verify-utf8.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
jsonschema = { version = "0.26", default-features = false }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
unicode-segmentation = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
